--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,20 @@
+requests==2.32.4
+html2image==2.0.7
+websocket-client==1.8.0
+certifi==2025.7.14
+charset-normalizer==3.4.2
+idna==3.10
+urllib3==2.5.0
+python-dotenv==1.1.1
+discord==2.3.2
+discord.py==2.5.2
+aiohttp==3.12.14
 aiohappyeyeballs==2.6.1
-aiohttp==3.11.16
-aiosignal==1.3.2
+aiosignal==1.4.0
 async-timeout==5.0.1
 attrs==25.3.0
-blinker==1.9.0
-Brotli==1.1.0
-certifi==2025.1.31
-cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.8
-colorama==0.4.6
-cssselect2==0.8.0
-discord.py==2.5.2
-Flask==3.1.0
-fonttools==4.57.0
-frozenlist==1.5.0
-idna==3.10
-itsdangerous==2.2.0
-Jinja2==3.1.6
-MarkupSafe==3.0.2
-multidict==6.4.3
-pdf2image==1.17.0
-pillow==11.1.0
-propcache==0.3.1
-pycparser==2.22
-pydyf==0.11.0
-pyphen==0.17.2
-python-dotenv==1.1.0
-requests==2.32.3
-tinycss2==1.4.0
-tinyhtml5==2.0.0
-typing_extensions==4.13.2
-urllib3==2.4.0
-weasyprint==65.0
-webencodings==0.5.1
-Werkzeug==3.1.3
-yarl==1.19.0
-zopfli==0.2.3.post1
+frozenlist==1.7.0
+multidict==6.6.3
+propcache==0.3.2
+yarl==1.20.1
+typing-extensions==4.14.1
